unpackaged/main/default/objects/Community_Items__c/Community_Items__c.object-meta.xml
<CustomObject>
    <label>Community Item</label>
    <nameField>
        <displayFormat>ComID-{00}</displayFormat>
        <label>Community Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Community Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>