unpackaged/main/default/objects/Community_Items__c/fields/Abstract__c.field-meta.xml
<CustomField>
    <fullName>Abstract__c</fullName>
    <label>Abstract</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>