unpackaged/main/default/objects/Community_Items__c/fields/ALT_Tag__c.field-meta.xml
<CustomField>
    <fullName>ALT_Tag__c</fullName>
    <label>ALT Tag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>