unpackaged/main/default/objects/Community_Items__c/fields/Brainshark_9_Digit_Number__c.field-meta.xml
<CustomField>
    <fullName>Brainshark_9_Digit_Number__c</fullName>
    <label>Brainshark 9 Digit Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>