unpackaged/main/default/objects/Community_Items__c/fields/Brainshark_URL__c.field-meta.xml
<CustomField>
    <fullName>Brainshark_URL__c</fullName>
    <description>b=1&amp;</description>
    <formula>&quot;https://www.brainshark.com/biocomposites/vu?pi=&quot;&amp;Brainshark_9_Digit_Number__c
&amp;&quot;&amp;em=&quot;&amp; User_Name_No_Sp_Chars__c 
&amp;&quot;&amp;c1=&quot;&amp; $User.Id
&amp;&quot;&amp;c2=&quot;&amp; $User.ContactId
&amp;&quot;&amp;b=1&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brainshark URL</label>
    <type>Text</type>
</CustomField>