unpackaged/main/default/objects/Community_Items__c/fields/Created_Date_60_days__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_60_days__c</fullName>
    <formula>Start_Date_For_New_Icon__c  +60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date For &quot;New&quot; Icon + 60 days</label>
    <type>Date</type>
</CustomField>