unpackaged/main/default/objects/Community_Items__c/fields/DO_NOT_SHOW__c.field-meta.xml
<CustomField>
    <fullName>DO_NOT_SHOW__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DO NOT SHOW</label>
    <type>Checkbox</type>
</CustomField>