unpackaged/main/default/objects/Community_Items__c/fields/Featured_Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Featured_Item_Type__c</fullName>
    <label>Featured Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brainshark</fullName>
                <default>true</default>
                <label>Brainshark</label>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
                <isActive>false</isActive>
                <label>Standard</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>