unpackaged/main/default/objects/Community_Items__c/fields/Hub_Email_Body_Copy__c.field-meta.xml
<CustomField>
    <fullName>Hub_Email_Body_Copy__c</fullName>
    <label>Hub Email Body Copy</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>