unpackaged/main/default/objects/Community_Items__c/fields/Hub_Email_Heading__c.field-meta.xml
<CustomField>
    <fullName>Hub_Email_Heading__c</fullName>
    <label>Hub Email Heading</label>
    <length>150</length>
    <type>Text</type>
</CustomField>