unpackaged/main/default/objects/Community_Items__c/fields/Hub_Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>Hub_Email_Subject__c</fullName>
    <label>Hub Email Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>