unpackaged/main/default/objects/Community_Items__c/fields/Hub_Push_Signature__c.field-meta.xml
<CustomField>
    <fullName>Hub_Push_Signature__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hub Push Signature</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Community_Items</relationshipName>
    <type>Lookup</type>
</CustomField>