unpackaged/main/default/objects/Community_Items__c/fields/Marketing_Resources_URL__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Resources_URL__c</fullName>
    <label>Marketing Resources URL</label>
    <type>TextArea</type>
</CustomField>