unpackaged/main/default/objects/Community_Items__c/fields/New_Item__c.field-meta.xml
<CustomField>
    <fullName>New_Item__c</fullName>
    <formula>IF(   Created_Date_60_days__c   &gt;=  TODAY() , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Item?</label>
    <type>Checkbox</type>
</CustomField>