unpackaged/main/default/objects/Community_Items__c/fields/Our_View__c.field-meta.xml
<CustomField>
    <fullName>Our_View__c</fullName>
    <label>Key Findings</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>