unpackaged/main/default/objects/Community_Items__c/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <label>Profile</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Community - DISTRIBUTOR CANADA</fullName>
            </value>
            <value>
                <fullName>Community - DISTRIBUTOR USA - Mid Atlantic</fullName>
            </value>
            <value>
                <fullName>Community - DISTRIBUTOR USA - Mid West</fullName>
            </value>
            <value>
                <fullName>Community - DISTRIBUTOR USA - North East</fullName>
            </value>
            <value>
                <fullName>Community - DISTRIBUTOR USA - North West</fullName>
            </value>
            <value>
                <fullName>Community - DISTRIBUTOR USA - South Central</fullName>
            </value>
            <value>
                <fullName>Community - DISTRIBUTOR USA - South East</fullName>
            </value>
            <value>
                <fullName>Community - DISTRIBUTOR USA - South West</fullName>
            </value>
            <value>
                <fullName>Community - DISTRIBUTOR USA - West Central</fullName>
            </value>
            <value>
                <fullName>Customer Community Login User cloned</fullName>
            </value>
            <value>
                <fullName>Distributors - EU (English)</fullName>
            </value>
            <value>
                <fullName>Distributors - India</fullName>
            </value>
            <value>
                <fullName>Distributors - USA</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Market Development – UK</fullName>
            </value>
            <value>
                <fullName>Regional Managers – USA</fullName>
            </value>
            <value>
                <fullName>System Administrator</fullName>
            </value>
            <value>
                <fullName>Biocomposites - SALES MANAGER CHINA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>