unpackaged/main/default/objects/Community_Items__c/fields/Publishers__c.field-meta.xml
<CustomField>
    <fullName>Publishers__c</fullName>
    <label>Journal / Meeting</label>
    <type>TextArea</type>
</CustomField>