unpackaged/main/default/objects/Community_Items__c/fields/Signature_Block__c.field-meta.xml
<CustomField>
    <fullName>Signature_Block__c</fullName>
    <formula>Hub_Push_Signature__r.Push_Sig_Block__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signature Block</label>
    <type>Text</type>
</CustomField>