unpackaged/main/default/objects/Community_Items__c/fields/Sort_Number__c.field-meta.xml
<CustomField>
    <fullName>Sort_Number__c</fullName>
    <label>Sort Number</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>