unpackaged/main/default/objects/Community_Items__c/fields/Start_Date_For_New_Icon__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_For_New_Icon__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Start Date For &quot;New&quot; Icon</label>
    <type>Date</type>
</CustomField>