unpackaged/main/default/objects/Community_Items__c/fields/STIMULAN__c.field-meta.xml
<CustomField>
    <fullName>STIMULAN__c</fullName>
    <defaultValue>false</defaultValue>
    <description>STIMULAN flag</description>
    <label>STIMULAN</label>
    <type>Checkbox</type>
</CustomField>