unpackaged/main/default/objects/Community_Items__c/fields/Subtype__c.field-meta.xml
<CustomField>
    <fullName>Subtype__c</fullName>
    <label>Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stimulan</fullName>
            </value>
            <value>
                <fullName>genex</fullName>
            </value>
            <value>
                <fullName>Internal Documents</fullName>
            </value>
            <value>
                <fullName>External Documents</fullName>
            </value>
            <value>
                <fullName>Subtype 5</fullName>
            </value>
            <value>
                <fullName>Subtype 6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>