unpackaged/main/default/objects/Community_Items__c/fields/Text_For_Brainshark_Tile__c.field-meta.xml
<CustomField>
    <fullName>Text_For_Brainshark_Tile__c</fullName>
    <inlineHelpText>If you are entering info for the surgeon hub this is the text text in the tile</inlineHelpText>
    <label>Text For Brainshark Tile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>