unpackaged/main/default/objects/Community_Items__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Marketing collateral</fullName>
            </value>
            <value>
                <fullName>Sales tools</fullName>
            </value>
            <value>
                <fullName>Account management</fullName>
            </value>
            <value>
                <fullName>Contact us</fullName>
            </value>
            <value>
                <fullName>Internal only</fullName>
            </value>
            <value>
                <fullName>Personal Details</fullName>
            </value>
            <value>
                <fullName>Topic of Interest / Notices</fullName>
            </value>
            <value>
                <fullName>Tutorial</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Brainshark Training</fullName>
            </value>
            <value>
                <fullName>Video box</fullName>
            </value>
            <value>
                <fullName>Publication Library</fullName>
            </value>
            <value>
                <fullName>Featured Video</fullName>
            </value>
            <value>
                <fullName>Featured Item</fullName>
            </value>
            <value>
                <fullName>Surgeon</fullName>
            </value>
            <value>
                <fullName>Continuing Education</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>