unpackaged/main/default/objects/Community_Items__c/fields/URL_for_Document__c.field-meta.xml
<CustomField>
    <fullName>URL_for_Document__c</fullName>
    <label>URL for Document</label>
    <length>255</length>
    <type>Text</type>
</CustomField>