unpackaged/main/default/objects/Community_Items__c/fields/URL_For_iPad_Image__c.field-meta.xml
<CustomField>
    <fullName>URL_For_iPad_Image__c</fullName>
    <label>URL For iPad Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>