unpackaged/main/default/objects/Community_Items__c/fields/Use_this_as_featured_item__c.field-meta.xml
<CustomField>
    <fullName>Use_this_as_featured_item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Use this as featured item</label>
    <referenceTo>Community_Items__c</referenceTo>
    <relationshipLabel>Community Items</relationshipLabel>
    <relationshipName>Community_Items</relationshipName>
    <type>Lookup</type>
</CustomField>