unpackaged/main/default/objects/Community_Items__c/fields/User_Name_No_Sp_Chars__c.field-meta.xml
<CustomField>
    <fullName>User_Name_No_Sp_Chars__c</fullName>
    <formula>SUBSTITUTE( $User.Email , &quot;&#39;&quot;, &quot;%27&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Name (No Sp Chars)</label>
    <type>Text</type>
</CustomField>