unpackaged/main/default/objects/Community_Items__c/fields/Video_thumbnail_URL__c.field-meta.xml
<CustomField>
    <fullName>Video_thumbnail_URL__c</fullName>
    <label>Video thumbnail URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>