unpackaged/main/default/objects/Community_Items__c/recordTypes/Brainshark_Training.recordType-meta.xml
<RecordType>
    <fullName>Brainshark_Training</fullName>
    <active>true</active>
    <label>Brainshark Training</label>
</RecordType>