unpackaged/main/default/objects/Community_Items__c/recordTypes/Continuing_Education.recordType-meta.xml
<RecordType>
    <fullName>Continuing_Education</fullName>
    <active>true</active>
    <label>Continuing Education</label>
</RecordType>