unpackaged/main/default/objects/Community_Items__c/recordTypes/Featured_Item.recordType-meta.xml
<RecordType>
    <fullName>Featured_Item</fullName>
    <active>true</active>
    <label>Featured Item</label>
</RecordType>