unpackaged/main/default/objects/Community_Items__c/recordTypes/Header_Image.recordType-meta.xml
<RecordType>
    <fullName>Header_Image</fullName>
    <active>true</active>
    <label>Header Image</label>
</RecordType>