unpackaged/main/default/objects/Community_Items__c/recordTypes/Left_Panel.recordType-meta.xml
<RecordType>
    <fullName>Left_Panel</fullName>
    <active>true</active>
    <label>Left Panel</label>
</RecordType>