unpackaged/main/default/objects/Community_Items__c/recordTypes/Logo.recordType-meta.xml
<RecordType>
    <fullName>Logo</fullName>
    <active>true</active>
    <label>Logo</label>
</RecordType>