unpackaged/main/default/objects/Community_Items__c/recordTypes/Marketing_Resources.recordType-meta.xml
<RecordType>
    <fullName>Marketing_Resources</fullName>
    <active>true</active>
    <label>Marketing Resources</label>
</RecordType>