unpackaged/main/default/objects/Community_Items__c/recordTypes/Mobile_App_Permission.recordType-meta.xml
<RecordType>
    <fullName>Mobile_App_Permission</fullName>
    <active>true</active>
    <label>Mobile App Permission</label>
</RecordType>