unpackaged/main/default/objects/Community_Items__c/recordTypes/Publication_Library.recordType-meta.xml
<RecordType>
    <fullName>Publication_Library</fullName>
    <active>true</active>
    <label>Publication Library</label>
</RecordType>