unpackaged/main/default/objects/Community_Items__c/recordTypes/Surgeon.recordType-meta.xml
<RecordType>
    <fullName>Surgeon</fullName>
    <active>true</active>
    <label>Surgeon</label>
</RecordType>