unpackaged/main/default/objects/Community_Items__c/recordTypes/Topics_Of_Interest.recordType-meta.xml
<RecordType>
    <fullName>Topics_Of_Interest</fullName>
    <active>true</active>
    <label>Topics Of Interest</label>
</RecordType>