unpackaged/main/default/objects/Community_Items__c/recordTypes/Video_Library.recordType-meta.xml
<RecordType>
    <fullName>Video_Library</fullName>
    <active>true</active>
    <label>Video Library</label>
</RecordType>