unpackaged/main/default/objects/Community_Items__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Type__c</columns>
    <columns>DO_NOT_SHOW__c</columns>
    <columns>Content__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>ALT_Tag__c</columns>
    <columns>Sort_Number__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>