unpackaged/main/default/objects/Community_Items__c/listViews/Docs_Featured_Items.listView-meta.xml
<ListView>
    <fullName>Docs_Featured_Items</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>ALT_Tag__c</columns>
    <columns>Sort_Number__c</columns>
    <columns>Type__c</columns>
    <columns>Subtype__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Featured Video,Featured Item</value>
    </filters>
    <label>05. Featured Items</label>
</ListView>