unpackaged/main/default/objects/Community_Items__c/listViews/Docs_SALES_TOOLS.listView-meta.xml
<ListView>
    <fullName>Docs_SALES_TOOLS</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>ALT_Tag__c</columns>
    <columns>Sort_Number__c</columns>
    <columns>Type__c</columns>
    <columns>Subtype__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Sales tools</value>
    </filters>
    <label>04. Docs - Sales Tools</label>
</ListView>