unpackaged/main/default/objects/Community_Items__c/listViews/Internal_Only.listView-meta.xml
<ListView>
    <fullName>Internal_Only</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Content__c</columns>
    <columns>Sort_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Internal only</value>
    </filters>
    <label>Internal Only</label>
</ListView>