unpackaged/main/default/objects/Community_Items__c/listViews/Mobile_App_Items.listView-meta.xml
<ListView>
    <fullName>Mobile_App_Items</fullName>
    <columns>NAME</columns>
    <columns>Brainshark_9_Digit_Number__c</columns>
    <columns>Title__c</columns>
    <columns>ALT_Tag__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Community_Items__c.Mobile_App_Permission</value>
    </filters>
    <label>Mobile App Items</label>
</ListView>