unpackaged/main/default/objects/Community_Items__c/listViews/Topics_Of_Interest.listView-meta.xml
<ListView>
    <fullName>Topics_Of_Interest</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Content__c</columns>
    <columns>Sort_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Community_Items__c.Topics_Of_Interest</value>
    </filters>
    <label>01. Topics Of Interest</label>
</ListView>