unpackaged/main/default/objects/Community_Items__c/listViews/Training_Docs.listView-meta.xml
<ListView>
    <fullName>Training_Docs</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>DO_NOT_SHOW__c</columns>
    <columns>Sort_Number__c</columns>
    <columns>URL_For_Image__c</columns>
    <columns>Type__c</columns>
    <columns>Brainshark_9_Digit_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Community_Items__c.Brainshark_Training</value>
    </filters>
    <label>06. Brainshark Training</label>
</ListView>