unpackaged/main/default/objects/Community_Items__c/listViews/X10_Continuing_education.listView-meta.xml
<ListView>
    <fullName>X10_Continuing_education</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>DO_NOT_SHOW__c</columns>
    <columns>Sort_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Continuing Education</value>
    </filters>
    <label>10. Continuing Education</label>
</ListView>