unpackaged/main/default/objects/Community_Items__c/listViews/X8_Video_Library.listView-meta.xml
<ListView>
    <fullName>X8_Video_Library</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>DO_NOT_SHOW__c</columns>
    <columns>Sort_Number__c</columns>
    <columns>Video_URL__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Community_Items__c.Left_Panel</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Video box</value>
    </filters>
    <filters>
        <field>DO_NOT_SHOW__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>08. Video Library</label>
</ListView>