unpackaged/main/default/objects/Community_Items__c/listViews/X9_Surgeon.listView-meta.xml
<ListView>
    <fullName>X9_Surgeon</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Text_For_Brainshark_Tile__c</columns>
    <columns>DO_NOT_SHOW__c</columns>
    <columns>Sort_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Community_Items__c.Surgeon</value>
    </filters>
    <label>09. Surgeon</label>
</ListView>